--- a/home.html
+++ b/home.html
@@ -68,7 +68,7 @@
             color: #fff;
             text-align: center;
             padding: 20px 0;
-            position: absolute;
+            position: fixed;
             bottom: 0;
             width: 100%;
         }
@@ -135,9 +135,9 @@
     </script>
 
     <!-- Footer -->
-    <footer>
-        <p>Created by @whitehat.mr | Design by @aathienvision</p>
-    </footer>
+<footer>
+   <p>Created by @whitehat.mr | Design by @aathienvision</p>
+</footer>
 </body>
 
 </html>
