--- a/deals.html
+++ b/deals.html
@@ -68,7 +68,7 @@
             color: #fff;
             text-align: center;
             padding: 20px 0;
-            position: fixed;
+            position: absolute;
             bottom: 0;
             width: 100%;
         }
