--- a/deals.html
+++ b/deals.html
@@ -67,8 +67,8 @@
             background-color: #000;
             color: #fff;
             text-align: center;
-            padding: 20px 0;
-            position: absolute;
+            padding: 05px 0;
+            position: fixed;
             bottom: 0;
             width: 100%;
         }
